src/css/App.css
.teams-display {
  display: flex;
  /* justify-content: space-between; */
  flex-wrap: wrap;
}

.team-display {
  /* width: 300px; */
  /* display: flex; */
  width: 100%;
  margin-top: 10px;
  margin-bottom: 10px;

  text-align: center;
}

.team-title {
  font-size: 1em;
}

.team-info {
  font-size: 0.8em;
}

.unit-info {
  font-size: 0.6em;
}

.unit-info h5 {
  font-size: 1em;
}

.team-image {
  padding-top: 0px;

  width: 5em;
}

button {
  width: 75%;
}

.my-nav {
  margin-bottom: 10px;
}

.brand-nav {
  margin-left: 10px;
  margin-right: 10px;
}
.no-ally {
  text-align: center;
}

.card-header {
  padding: 0;
  background-color: white;
  border-color: black;
}

.card {
  border-color: black;
}

.card-body {
  border-color: black;
}

.btn.btn-link {
  padding: 0;
  width: 100%;
  text-decoration: none;
}

.btn.btn-link:visited {
  text-decoration: none;
}
.btn.btn-link:hover {
  text-decoration: none;
}
.btn.btn-link:active {
  text-decoration: none;
}

.btn.btn-link:focus {
  outline: none;
  box-shadow: none;
}

.team {
  width: 46%;
  margin: 2%;
}

.row {
  align-items: center;
  white-space: nowrap;
  color: black;
  /* pointer-events: none; */
}

.unit-name {
  text-decoration: underline;
}

.collapse.show {
  text-decoration: none;
}

.collapse {
  text-decoration: none;
}

.collapse.show:hover {
  text-decoration: none;
}

.collapse:hover {
  text-decoration: none;
}

.collapse.show:active {
  text-decoration: none;
}

.collapse:active {
  text-decoration: none;
}

